expand/collapse all button, fix styles, add translations

--- a/app/stylus/categories.styl
+++ b/app/stylus/categories.styl
@@ -1,10 +1,18 @@
 .tree
+  ul
+    position relative
+  button.tree-toggler
+    position absolute
+    top 5px
+    right 5px
+    z-index 3
   li
     display none
     margin 0px 0
     list-style-type none
     position relative
     padding 14px 0 0 5px
+    max-width 90%
     span.type
       margin-left 15px
     &:before
