--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -62,6 +62,9 @@ body
   border-top-color  greensea
   border-left-color greensea
 
+.btn:focus
+  outline none
+
 .ng-pageslide
   display none
   overflow hidden
@@ -103,6 +106,7 @@ body
   .userpic
     position relative
     border-radius 50%
+    outline none
     img
       border-radius 50%
     .overlay, .settings
